syntax = "proto3";
option go_package = ".;publisher";

service Publisher {
  rpc SubmitToSingleCTWithResult(Request) returns (Result) {}
}

message Request {
  bytes der = 1;
  string LogURL = 2;
  string LogPublicKey = 3;
  bool precert = 4;
  bool storeSCT = 5;
}

message Result {
  bytes sct = 1;
}
